fix: tried to fix the scrollbar.

--- a/src/app/sections/atf/atf.scss
+++ b/src/app/sections/atf/atf.scss
@@ -1,49 +1,49 @@
 .atf-section {
   position: relative;
+  width: 100vw;
+  margin: 0 auto;
   min-height: 100vh;
-  max-width: 100vw;
-  background: linear-gradient(to bottom, #ffffff 0%, #d3e3fa 100%);
-  z-index: 3;
-}
-
-.atf-inner {
-  max-width: 1440px;
-  height: 100vh;
-  margin-inline: auto;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  background: linear-gradient(to bottom, #ffffff 0%, #d3e3fa 100%);
+  z-index: 5;
 }
 
 .atf-left,
 .atf-right {
-  flex: 0 0 50%;
-  position: relative;
+  flex: 0 0 720px;
 }
 
 .atf-ellipse {
   position: absolute;
   top: -140px;
-  left: -199px;
+  left: -220px;
   width: 892px;
   height: auto;
-  z-index: 5;
-  overflow: hidden;
+  z-index: 1;
 }
 
 .atf-portrait {
   position: absolute;
-  margin-left: 80px;
   bottom: 0;
   height: 670px;
   width: auto;
-  z-index: 5;
+  z-index: 2;
+}
+
+.atf-left {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .atf-right {
+  position: relative;
+  z-index: 3;
   display: flex;
   justify-content: flex-start;
   margin-top: 150px;
 }
+
 .atf-text {
   color: var(--color-accent);
   text-align: left;
@@ -52,7 +52,7 @@
   font-family: 'Baloo 2';
   font-weight: 100;
   font-size: 58px;
-  margin: 0 0 0px 4px;
+  margin: 0 0 0 4px;
 }
 
 .header-social-buttons {
@@ -61,11 +61,10 @@
   right: 54px;
   bottom: 24px;
   display: flex;
-  flex-direction: column; /* untereinander */
+  flex-direction: column;
   gap: 12px;
-  z-index: 5;
+  z-index: 4;
 }
-
 .image-item {
   inline-size: 48px;
   block-size: 48px;
@@ -73,23 +72,19 @@
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
-  z-index: 6;
 }
-
 .img-1 {
   background-image: url('/icons/git-default.png');
 }
 .img-1:hover {
   background-image: url('/icons/git-hover.png');
 }
-
 .img-2 {
   background-image: url('/icons/email-default.png');
 }
 .img-2:hover {
   background-image: url('/icons/email-hover.png');
 }
-
 .img-3 {
   background-image: url('/icons/linkedin-default.png');
 }
@@ -105,6 +100,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 4;
 
   p {
     font-family: 'Baloo 2';
