--- a/src/app/sections/work/work.scss
+++ b/src/app/sections/work/work.scss
@@ -3,6 +3,7 @@
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
 }
 
 .big-ellipse {
