--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -46,7 +46,7 @@
 
 .nav-list {
   display: flex;
-  gap: 30px;
+  gap: 50px;
   list-style: none;
 }
 
